# guana

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  shell.nix
guana/: Cargo.toml
guana-client/: Cargo.toml  README.md
guana-client/src/: error.rs  lib.rs  main.rs
guana-grpc-types/: Cargo.toml  build.rs
guana-grpc-types/src/: lib.rs
guana-server/: Cargo.toml  README.md
guana-server/src/: lib.rs  main.rs  user_agent_analyzer.rs
guana-service/: Cargo.toml  README.md
guana-service/src/: lib.rs  user_agent_analyzer.rs
guana/src/: cli.rs  main.rs
proto/: user_agent_analyzer.proto
