[package]
name = "guana-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guana-grpc-types = { path = "../guana-grpc-types" }

tonic = { version = "0.9.2", features = ["tls"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
thiserror = "1.0.41"
argh = "0.1.10"
owo-colors = "3.5.0"
rustyline = "12.0.0"
