[package]
name = "guana-server"
version = "0.1.0"
edition = "2021"

[dependencies]
guana-grpc-types = { path = "../guana-grpc-types" }

tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
tonic-health = "0.9.2"
tonic-reflection = "0.9.2"
tonic = { version = "0.9.2"}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
thiserror = "1.0.41"
